--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav">
             
-  <li class="nav-item nav-color"><a class="nav-link" href="">Contact</a></li>
+  <li class="nav-item nav-color"><a class="nav-link" href="contact.html">Contact</a></li>
   <li class="nav-item nav-color"><a class="nav-link" href="">Home</a></li>
   <li class="nav-item nav-color"><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
