--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     
     <form>
       <div class="form-outer"> 
-        <span style="padding: 20px;font-size: large;color: rgb(213, 106, 56);">We accept stray cats. Kindly contact if you find one</span>
+        <span style="padding: 20px;font-size: large;color: white;">We accept stray cats. Kindly contact if you find one</span>
       <div class="form">
         <div>
           <a class="navbarBrand" style="color: black;font-size:x-large;font-weight: 900;" href="#" >
